Change the html title to raspandacu

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react-app",
-  "name": "react-app",
+  "short_name": "raspandacu",
+  "name": "Raspandacu",
   "icons": [
     {
       "src": "favicon.ico",
