--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
+    "react-helmet": "^6.1.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "5.1.2",
     "react-rte": "^0.16.3",
@@ -108,6 +109,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-rte": "^0.16.1",
     "prettier": "^2.1.2",
